<resources>
    <string name="app_name">TpContador</string>
    <string name="contador">Contador</string>
    <string name="decrementar">Decrementar</string>
    <string name="resetear">Resetear</string>
    <string name="incrementar">Incrementar</string>
    <string name="_0">0</string>
    <string name="_00">0</string>
    <string name="ingrese_un_valor">ingrese un valor</string>
    <string name="error_message">Error: Valor no válido.</string>

</resources>